@@ -1,0 +1,14 @@
+<?php
+/*
+* @package Include/help/en/
+*/
+?>
+
+<h1>Agent Plugins</h1>
+
+<p>Since Pandora FMS 5.0, with the plugins editor in policies is possible propagate the agents plugins easily.
+<br><br>
+Is possible to add agent plugins in a policy to be created in each local agent when be applied. 
+<br><br>
+Example: cscript.exe //B "%ProgramFiles%\Pandora_Agent\util\df.vbs" 
+
